--- a/faq.html
+++ b/faq.html
@@ -146,7 +146,7 @@
         </p>
         <div class="collapse" id="collapseRSVP">
           <div class="card card-body"><p>
-            TBD
+            Kindly R.S.V.P. by June 1, 2025. Unfortuantely we need an accurate guest count and cannot accept any more guests after that date.
           </p></div>
         </div>
         <br>
@@ -295,6 +295,23 @@
             Here is our optional <a href="https://www.zola.com/registry/maggieandjulia2025" class="text-body-secondary">registry</a>.
         </div>
         <br>
+
+        <p class="d-inline-flex gap-1">
+          <button class="faq-question btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseContact" aria-expanded="false" aria-controls="collapseContact">
+            <span>
+              Who can I ask if I have more questions?
+            </span>
+            <div class="container-icon">
+              <i class="fas fa-chevron-down ms-2"></i>
+            </div>
+          </button>
+        </p>
+        <div class="collapse" id="collapseContact">
+          <div class="card card-body"><p>
+            You can contact both Maggie and Julia with questions about the wedding by emailing us at maggieandjulia1111@gmail.com.
+        </div>
+        <br>
+
         <script>
           document.addEventListener('DOMContentLoaded', function() {
             const collapseButton = document.querySelector('[data-bs-target="#collapseExample"]');
