--- a/faq.html
+++ b/faq.html
@@ -146,7 +146,7 @@
         </p>
         <div class="collapse" id="collapseRSVP">
           <div class="card card-body"><p>
-            Kindly R.S.V.P. by June 23, 2025. Unfortuantely we need an accurate guest count and cannot accept any more guests after that date.
+            Kindly R.S.V.P. by June 23, 2025. We need an accurate guest count and cannot accept any more guests after that date.
           </p></div>
         </div>
         <br>
