--- a/faq.html
+++ b/faq.html
@@ -292,7 +292,7 @@
           <div class="card card-body"><p>
             Your presence is all the gift we need! Seriously, thank you for celebrating our union with us. We know a lot of our guests had to make sacrifices to make it, and we are so grateful.<br><br>
             If you do feel called to give more, we put together a honey moon fund and wish-list to give you some ideas of items that will help build our life together.
-            Here is our optional <a href="https://www.zola.com/registry/maggieandjulia2025" class="text-body-secondary">registry</a>.
+            Here is our optional <a href="https://www.zola.com/registry/maggieandjulia2025" class="text-body-secondary">registry</a>.</p></div>
         </div>
         <br>
 
@@ -308,7 +308,7 @@
         </p>
         <div class="collapse" id="collapseContact">
           <div class="card card-body"><p>
-            You can contact both Maggie and Julia with questions about the wedding by emailing us at maggieandjulia1111@gmail.com.
+            You can contact both Maggie and Julia with questions about the wedding by emailing us at maggieandjulia1111@gmail.com.</p></div>
         </div>
         <br>
 
