Revert "remove some http://"
This reverts commit 72fa17cd857fd4c960e052e20f63fd8fce2ea960.

--- a/travel.html
+++ b/travel.html
@@ -353,7 +353,7 @@
             <ul>
               <li>The <a href="https://www.boulderteahouse.com/" class="text-body-secondary">Dushanbe Tea House</a> is our favorite Boulder attraction.
                 It was built in Tajikistan and boasts beautiful architecture as well as over 100 varieties of tea.</li>
-              <li><a href="//flowerpeppereats.com/" class="text-body-secondary">Flower Pepper</a> is Julia's favorite hole-in-the-wall:
+              <li><a href="http://flowerpeppereats.com/" class="text-body-secondary">Flower Pepper</a> is Julia's favorite hole-in-the-wall:
                 authentic Sichuanese food, perfectly bite-sized soup dumplings, yum.</li>
               <li><a href="https://www.therayback.com/" class="text-body-secondary">Rayback Collective</a> has any local beer you could dream of.
                 Check their website for their rotating food truck selection and live music.</li>
