--- a/schedule.html
+++ b/schedule.html
@@ -118,22 +118,37 @@
             <h1 class="mt-3"></h1>
 
             <h3 class="mt-3">Saturday, August 23</h3>
-            <p>The big event!</p>
-            <p>Location: Planet Bluegrass, Lyons, CO</p>
-            <p>Time: ~3 P.M. - 10 P.M.<br>
-              Detailed schedule: <b>TBA</b>
+            <h4>The big event!</h4>
+            <p><b>Location:</b> Planet Bluegrass, Lyons, CO</p>
+            <p><b>Time:</b> 3:30 P.M. - 10 P.M.<br>
+              Detailed schedule:
+                <li>2:30 P.M.: Shuttle leaves from Boulder hotel</li>
+                <li>3:30 P.M.: Ceremony</li>
+                <li>5:15 P.M.: Dinner</li>
+                <li>7:00 P.M: Dancing the night away</li>
+                <li>9:00 P.M.: First shuttle departs for Boulder</li>
+                <li>10:00 P.M.: Wedding Ends & Second shuttle departs for Boulder</li>
             </p>
 
-            <p>Dress: Dress to impress and to feel your best. We want you to be comfortable and ready to dance.<br><br>
+            <p><b>Dress:</b> Dress to impress and to feel your best. We want you to be comfortable and ready to dance.<br><br>
               While this is a formal event, please wear appropriate footwear for walking on a grassy lawn and consider bringing an extra layer. Colorado regularly has 30° temperature swings between day and night. 
               And a gentle reminder: no white.</p>
 
+            <h5>After Party</h5>
+            <p><b>Location:</b> A-Lodge, Lyons, CO</p>
+            <p><b>Time:</b> 10:00 P.M. - 12 A.M.<br>
+            <p>For those who still want to boogie! <br>
+              Drunk food available for purchase by The Rock Garden Grill.
+            </p>
+            <p>Additional shuttles departing for Boulder at 11 P.M. and 12 A.M.</p>
+
+
             <h3 class="mt-3">Sunday, August 24</h3>
-            <p>Swing by for hugs on your way out of town. We will be gathering with some coffee carafes to say our goodbyes. Mimosas and breakfast burritos for purchase.</p>
-            <p>Location: The Rock Garden in Lyons, CO</p>
-            <p>Time: <b>TBA</b></p>
-            <p>Dress: Whatever is comfortable. Pajamas acceptable.</p>
-  
+            <p><b>Location:</b> A-Lodge, Lyons, CO</p>
+            <p><b>Time:</b> 10 A.M. - 12 P.M.</p>
+            <p><b>Dress:</b> Whatever is comfortable. Pajamas acceptable.</p>
+            <p>Swing by for hugs on your way out of town. We will be gathering with some coffee carafes to say our goodbyes. Mimosas and breakfast burritos for purchase by the Rock Garden Grill.</p>
+
           </div>
         </div>
       </div>
