--- a/schedule.html
+++ b/schedule.html
@@ -137,7 +137,7 @@
             <h5>After Party</h5>
             <p><b>Location:</b> A-Lodge, Lyons, CO</p>
             <p><b>Time:</b> 10:00 P.M. - 12 A.M.<br>
-            <p>For those who still want to boogie! <br>
+            <p>Optional event for those who still want to boogie! <br>
               Drunk food available for purchase by The Rock Garden Grill.
             </p>
             <p>Additional shuttles departing for Boulder at 11 P.M. and 12 A.M.</p>
@@ -147,7 +147,7 @@
             <p><b>Location:</b> A-Lodge, Lyons, CO</p>
             <p><b>Time:</b> 10 A.M. - 12 P.M.</p>
             <p><b>Dress:</b> Whatever is comfortable. Pajamas acceptable.</p>
-            <p>Swing by for hugs on your way out of town. We will be gathering with some coffee carafes to say our goodbyes. Mimosas and breakfast burritos for purchase by the Rock Garden Grill.</p>
+            <p>Optional unofficial event the day after. Swing by for hugs on your way out of town. We will be gathering with some coffee carafes to say our goodbyes. Mimosas and breakfast burritos for purchase by the Rock Garden Grill.</p>
 
           </div>
         </div>
