update image paths

--- a/faq.html
+++ b/faq.html
@@ -28,7 +28,7 @@
     <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
 
     <!-- Preload Banner Image -->
-    <link rel="preload" href="../images/foreheadkiss.webp" as="image">
+    <link rel="preload" href="images/foreheadkiss.webp" as="image">
 
     <style>
       .jumbotron-faq {
