--- a/rsvp.html
+++ b/rsvp.html
@@ -30,7 +30,7 @@
 
     <style>
       .jumbotron-rsvp {
-        background-image: url("../images/mountainblur.webp");
+        background-image: url("images/mountainblur.webp");
       }
 
       .rsvpcard {
