--- a/schedule.html
+++ b/schedule.html
@@ -30,7 +30,7 @@
 
     <style>
       .jumbotron-schedule {
-        background-image: url("../images/rockhands.webp");
+        background-image: url("images/rockhands.webp");
       }
 
       .schedule {
