--- a/story.html
+++ b/story.html
@@ -30,7 +30,7 @@
 
     <style>
       .jumbotron-story {
-        background-image: url("../images/cheekkiss.webp");
+        background-image: url("images/cheekkiss.webp");
       }
 
       img {
