--- a/thank-you.html
+++ b/thank-you.html
@@ -21,7 +21,7 @@
 
     <style>
       .jumbotron-ty {
-        background-image: url("../images/dancing.webp");
+        background-image: url("images/dancing.webp");
       }
     </style>
 
