--- a/travel.html
+++ b/travel.html
@@ -23,7 +23,7 @@
 
     <style>
       .jumbotron-travel {
-        background-image: url("../images/leading.webp");
+        background-image: url("images/leading.webp");
       }
 
       body {
