fix path in preload

--- a/faq.html
+++ b/faq.html
@@ -32,7 +32,7 @@
 
     <style>
       .jumbotron-faq {
-        background-image: url("../images/foreheadkiss.webp");
+        background-image: url("images/foreheadkiss.webp");
       }
 
       .faq-question {
