--- a/rsvp.html
+++ b/rsvp.html
@@ -26,7 +26,7 @@
     <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
 
     <!-- Preload Banner Image -->
-    <link rel="preload" href="../images/mountainblur.webp" as="image">
+    <link rel="preload" href="images/mountainblur.webp" as="image">
 
     <style>
       .jumbotron-rsvp {
