--- a/schedule.html
+++ b/schedule.html
@@ -26,7 +26,7 @@
     <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
 
     <!-- Preload Banner Image -->
-    <link rel="preload" href="../images/rockhands.webp" as="image">
+    <link rel="preload" href="images/rockhands.webp" as="image">
 
     <style>
       .jumbotron-schedule {
