--- a/thank-you.html
+++ b/thank-you.html
@@ -17,7 +17,7 @@
     <link href="./css/custom.css" rel="stylesheet">
 
     <!-- Preload Banner Image -->
-    <link rel="preload" href="../images/dancing.webp" as="image">
+    <link rel="preload" href="images/dancing.webp" as="image">
 
     <style>
       .jumbotron-ty {
