--- a/travel.html
+++ b/travel.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- Preload Banner Image -->
-    <link rel="preload" href="../images/leading.webp" as="image">
+    <link rel="preload" href="images/leading.webp" as="image">
 
     <style>
       .jumbotron-travel {
